fix for registration of repeating repeating units