@@ -1,3 +1,3 @@
 #!/bin/sh
-export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128M -Djava.security.egd=file:/dev/./urandom"
+. ./mvnalias.sh
 mvn -U -DskipTests=true -P rdf spring-boot:run
